tests/machine/x/cobol/map_assign.error
error: cobc error: exit status 1
/workspace/mochi/tests/machine/x/cobol/map_assign.cob:6: error: syntax error, unexpected OCCURS
/workspace/mochi/tests/machine/x/cobol/map_assign.cob:6: error: PICTURE clause required for 'FILLER 1'
/workspace/mochi/tests/machine/x/cobol/map_assign.cob:11: error: syntax error, unexpected VALUE
/workspace/mochi/tests/machine/x/cobol/map_assign.cob:14: error: syntax error, unexpected VALUE
/workspace/mochi/tests/machine/x/cobol/map_assign.cob:17: error: syntax error, unexpected VALUE, expecting (


source:
var scores = {"alice": 1}
scores["bob"] = 2
print(scores["bob"])
